examples/effects/parse_effect_bad_no_ret.kai
# m7a #3a negative test — operation without a return type fails to
# parse. Each effect operation must be `name(args) : ReturnType`.
# Stage 2 should reject this with a clear "expected `:` before
# operation return type" diagnostic at the closing brace.
#
# Tested in test-effects-parse-fail (Makefile).

effect Bad {
  noret(s: String)
}

fn main() : Int { 0 }
